package environment;

public interface Growable {
    public void grow();
}
