package environment.plants;

public interface Collectable {
    public void collect();
}
