package environment.plants;

public interface Dryable {
    public void dry();
}
