package environment.plants;

public interface Fermentable {
    public void ferment();
}
