package persons;

public record SpiritualPhrase(String phrase, int cost) { }
